# knowledge-base-HQ

./: README.md
access-and-refresh-token/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
access-and-refresh-token/src/: refresh-token-rotation.ts  traditonal-token.ts
langgraph-basics/: README.md  conditional.py  main.py  pyproject.toml
mem0-memory-layer/: README.md  docker-compose.yml  main.py  neo4j-explore.py  pyproject.toml
node-aws-s3/: package-lock.json  package.json
node-aws-s3/src/: index.ts
reACT-agent/reACT-agent-v1/: main.py  pyproject.toml
reACT-agent/reACT-agent-v1/src/: llm.py  tools.py
reACT-agent/reACT-agent-v2/: main.py  pyproject.toml
reACT-agent/reACT-agent-v2/src/: agent.py  llm.py  prompts.py  tokencounter.py  tools.py
reACT-agent/src/: tools.py
serverless-framework-main/: README.md  firstFn.js  package-lock.json  secondFn.js  serverless.yml
stock-analyzer-agent/: README.md  main.py  main_agent.py  pyproject.toml  workflow.py
stock-analyzer-agent/agents/: main_agent.py  subagent.py
stock-analyzer-agent/prompts/: main_agent_prompt.py
stock-analyzer-agent/tools/: calculator.py  get_company_insights.py  get_sentiment.py  get_stock_data.py  get_ticker.py  subagent.py  tools_export.py
tanstack-and-zustand/express-backend/: package-lock.json  package.json  tsconfig.json
tanstack-and-zustand/express-backend/src/: index.ts
tanstack-and-zustand/react-frontend/: URI.ts  index.html  package-lock.json  package.json
tanstack-and-zustand/react-frontend/network-fns/: add_user.ts  delete_user.ts  get_all_users.ts  update_user.ts
tanstack-and-zustand/react-frontend/src/: App.css  App.tsx
voice-agent/: README.md  main.py  pyproject.toml
(+1 files in other folders)
